main.css
html {
	color: #000;
	background: #FFF
}

main, body {
    font: helvetica,arial,sans-serif;
}

/* LOGO AND SEARCH BAR START */
#bd {
    text-align: center;
    position: fixed;
    width: 521px;
    left: 50%;
    transform: translate(-50%, 0%)
}

#yahoo-logo {
    margin-top: 80px;
    margin-bottom: 35px;
}
/* LOGO AND SEARCH BAR END */


/* FOOTER START */
#ft {
    height: 40px;
    position: absolute;
    bottom: 0;
    width: 100%;
    font-size: 11px;
    text-align: center;
    color: #1d1da3;
    padding-bottom: 40px;
}

ul {
    font-family:  "helvetica neue",helvetica,arial,sans-serif;
    font-style: normal;
    font-variant-caps: normal;
    font-weight: normal;
    font-stretch: normal;
    font-size: 13px;
    line-height: 1.25;
    
    list-style: none;
    list-style-position: outside;
    list-style-image: none;
    list-style-type: none;
}

li {
    display: inline;
    padding: 4px;
}

.updated {
    color: #324FE1;
    font-weight: bold;
    font-size: 13px;
    padding-left: 4px;
}

#yahoo-name {
    color: #5f5f5f;
    font-size: 13px;
}

.small-blue-words {
    font-size: 11px;
}
/* FOOTER END */

